--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Quantrix</h1>
+		<h3>smart data for smart companies</h3>
 	</body>
 </html>
