--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,10 +11,14 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
+        
 		<h1>Quantrix</h1>
 		<h3>smart data for smart companies</h3>
+
+        <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+  
+        <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
 	</body>
 </html>
