--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,24 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+
+import '../styles/global.css';
+
+const pageTittle = "About QTX";
+
+
+const identity = {
+  firstName: "Sarah",
+  country: "Canada",
+  occupation: "Technical Writer",
+  hobbies: ["photography", "birdwatching", "baseball"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+
+const happy = true;
+const finished = false;
+const goal = 5;
 
 ---
 
@@ -11,14 +31,33 @@
 		<title>Astro</title>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        
-		<h1>Quantrix</h1>
+        <Header />
+		<h1>{pageTittle}</h1>
 		<h3>smart data for smart companies</h3>
 
         <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
   
         <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+
+        <p>Here are a few facts about me:</p>
+        <ul>
+          <li>My name is {identity.firstName}.</li>
+          <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+          {identity.hobbies.length >= 2 &&
+            <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+          }
+        </ul>
+        <p>My skills are:</p>
+        <ul>
+          {skills.map((skill) => <li>{skill}</li>)}
+        </ul>
+
+        {happy && <p>I am happy to be learning Astro!</p>}
+
+{finished && <p>I finished this tutorial!</p>}
+
+{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+    
+        <Footer />
 	</body>
 </html>
